# xings-night-light

./: .gitignore  Makefile.am  NEWS  NEWS.md  README  README.md  autogen.sh  configure.ac
.github/: FUNDING.yml
data/: Makefile.am  org.xings.night-light.gschema.xml.in  xings-night-light-daemon.desktop.in  xings-night-light-preferences.desktop.in  xnl-preferences.ui
data/appdata/: Makefile.am  org.xings.NightLight.metainfo.xml.in
data/icons/: Makefile.am
data/icons/scalable/: Makefile.am
man/: Makefile.am  xings-night-light-daemon.sgml  xings-night-light-preferences.sgml
po/: LINGUAS  POTFILES.in  POTFILES.skip  es.po  es_AR.po  xings-night-light-daemon.pot  xings-night-light.pot
src/: Makefile.am  xings-night-light-daemon.c  xings-night-light-preferences.c  xnl-common.h  xnl-daemon.c  xnl-daemon.h  xnl-debug.c  xnl-debug.h  xnl-preferences-panel.c  xnl-preferences-panel.h  xnl-smoother.c  xnl-smoother.h  xsct.c  xsct.h
